--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
+body {
+    background-color: lightblue;
+}
+
 #container {
     display: flex;
     flex-direction: column;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 100vh;
 }
 
 #header {
     display: flex;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 #content {
     display: flex;
-    border: 2px solid orange;
+    /* border: 2px solid orange; */
     margin-top: auto;
     justify-content: center;
     align-items: center;
@@ -21,19 +25,36 @@
 #calculator {
     display: flex;
     flex-direction: column;
-    border: 2px solid pink;
+    border: 6px ridge pink;
+    border-radius: 15px;
+    background-color: lightgrey;
+}
+
+#display{
+    display: flex;
+}
+
+#screen {
+    display: flex;
+    margin: 8px;
+    height: 7vh;
+    flex: 1;
+    border-radius: 15px;
+    background-color: coral;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 #buttons {
     display: flex;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     justify-content: space-between;
 }
 
 .column {
     display: flex;
     flex-direction: column;
-    border: 2px solid purple;
+    /* border: 2px solid purple; */
     justify-content: space-between;
     padding: 4px;
 }
@@ -46,6 +67,6 @@
 
 #footer {
     display: flex;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin-top: auto;
 }
